Bugs: Fix Onload input > alignment Label Issue (#2200)
Bug: Fix Onload input > aligment Label Issue

--- a/assets/css/all-listings.css
+++ b/assets/css/all-listings.css
@@ -12975,8 +12975,9 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
   bottom: 8px;
 }
 
-.directorist-preload .directorist-search-field__label {
-  top: 0;
+.directorist-preload .directorist-search-form-top .directorist-search-field__label ~ .directorist-search-field__input {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .directorist-search-form__box {
